--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       <span class="grag-hooper">Greg Hooper</span>
     </picture>
   </div>
-
-
-  <!-- my section -->
+</body>
+<footer>
+    <!-- my section -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Mr-sajith</a>.
   </div>
-</body>
+</footer>
 </html>
